docs: update README with standard MCP server configuration
- Add comprehensive configuration examples for Claude Desktop, Cline, Cursor, and Windsurf
- Include proper uvx installation and usage instructions
- Add environment variables documentation
- Include practical usage examples and conversation patterns
- Follow standard Python MCP server documentation format
- Add pypi-query-mcp-server script entry point for uvx compatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ pre-commit = "^3.6.0"
 nox = "^2024.3.2"
 
 [tool.poetry.scripts]
+pypi-query-mcp-server = "pypi_query_mcp.server:main"
 pypi-query-mcp = "pypi_query_mcp.server:main"
 
 [tool.ruff]
