fix: resolve import sorting conflicts between ruff and isort
- Add isort configuration to pyproject.toml with black profile
- Fix import formatting to be compatible with both ruff and isort
- All lint checks now pass (both ruff and isort)
- Tests continue to pass

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,12 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+known_first_party = ["pypi_query_mcp"]
+
 [tool.mypy]
 python_version = "3.10"
 check_untyped_defs = true
