feat: fix CI workflow issues and improve release automation
- Add workflow_call trigger to test.yml to make it reusable by other workflows
- Fix codecov action parameter from 'file' to 'files' for v4 compatibility
- Update deprecated actions/create-release@v1 to softprops/action-gh-release@v2
- Add automated version bumping with commitizen
- Implement PyPI trusted publishing for secure, token-free uploads
- Add changelog generation with smart commit filtering
- Update to Python 3.13 and enhance dependency caching
- Use PERSONAL_ACCESS_TOKEN for enhanced permissions

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
+  workflow_call:
 
 jobs:
   test:
@@ -68,9 +69,9 @@ jobs:
 
     - name: Upload coverage to Codecov
       if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
-      uses: codecov/codecov-action@v5
+      uses: codecov/codecov-action@v4
       with:
-        file: ./coverage.xml
+        files: ./coverage.xml
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
