--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,102 +1,86 @@
-name: Release
+name: Upload Python Package
 
 on:
   push:
     tags:
-      - 'v*'
-
-permissions:
-  contents: read
+      - "v*"
 
 jobs:
-  test:
-    uses: ./.github/workflows/test.yml
-
-  build:
-    needs: test
+  deploy:
     runs-on: ubuntu-latest
+    permissions:
+      # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
+      contents: write
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       with:
+        token: "${{ secrets.GITHUB_TOKEN }}"
         fetch-depth: 0
-    
+        ref: main
+    - uses: olegtarasov/get-tag@v2.1.4
+      id: get_tag_name
+      with:
+        tagRegex: "v(?<version>.*)"
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: "3.11"
-    
-    - name: Install uv
+        python-version: '3.13'
+        
+    # 缓存 Poetry 依赖
+    - name: Cache Poetry dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pypoetry
+        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-poetry-
+          
+    - name: Install Poetry
       run: |
         python -m pip install --upgrade pip
         pip install uv
-    
+        uv --version
+        
     - name: Install dependencies
       run: |
         uvx poetry install
-    
-    - name: Build package
-      run: |
         uvx poetry build
-    
-    - name: Check package
-      run: |
-        uvx poetry run twine check dist/*
-    
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: dist
-        path: dist/
-
-  publish:
-    needs: build
-    runs-on: ubuntu-latest
-    environment: release
-    permissions:
-      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
-    steps:
-    - name: Download build artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: dist
-        path: dist/
-    
-    - name: Publish to PyPI
+        
+    # Note that we don't need credentials.
+    # We rely on https://docs.pypi.org/trusted-publishers/.
+    - name: Upload to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        skip-existing: true
-
-  github-release:
-    needs: publish
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    
+        packages-dir: dist
+        verbose: true
+        print-hash: true
+        
     - name: Generate changelog
       id: changelog
-      run: |
-        # Extract version from tag
-        VERSION=${GITHUB_REF#refs/tags/v}
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
-        
-        # Generate changelog (basic implementation)
-        echo "## Changes in v$VERSION" > CHANGELOG.md
-        echo "" >> CHANGELOG.md
-        git log --pretty=format:"- %s" $(git describe --tags --abbrev=0 HEAD^)..HEAD >> CHANGELOG.md || echo "- Initial release" >> CHANGELOG.md
-    
-    - name: Create GitHub Release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: jaywcjlove/changelog-generator@main
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release v${{ steps.changelog.outputs.version }}
-        body_path: CHANGELOG.md
-        draft: false
-        prerelease: false
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        filter-author: (|dependabot|renovate\[bot\]|dependabot\[bot\]|Renovate Bot)
+        filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
+        template: |
+          ## Bugs
+          {{fix}}
+          ## Feature
+          {{feat}}
+          ## Improve
+          {{refactor,perf,clean}}
+          ## Misc
+          {{chore,style,ci||🔶 Nothing change}}
+          ## Unknown
+          {{__unknown__}}
+          
+    - uses: ncipollo/release-action@v1
+      with:
+        artifacts: "dist/*"
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        body: |
+          Comparing Changes: ${{ steps.changelog.outputs.compareurl }}
+
+          ${{ steps.changelog.outputs.changelog }}
