--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ pytest-mock = "^3.12.0"
 ruff = "^0.1.0"
 pre-commit = "^3.6.0"
 nox = "^2025.0.0"
+commitizen = "^3.0.0"
 
 [tool.poetry.scripts]
 pypi-query-mcp-server = "pypi_query_mcp.server:main"
@@ -98,3 +99,11 @@ exclude_lines = [
     "if 0:",
     "if __name__ == .__main__.:",
 ]
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "v$version"
+version_scheme = "pep440"
+version_provider = "poetry"
+update_changelog_on_bump = true
+major_version_zero = true
