--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ fastmcp = "^0.4.0"
 httpx = "^0.28.0"
 packaging = "^24.0"
 pydantic = "^2.0.0"
+pydantic-settings = "^2.0.0"
 click = "^8.1.0"
 
 [tool.poetry.group.dev.dependencies]
