--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ httpx = "^0.28.0"
 packaging = "^24.0"
 pydantic = "^2.0.0"
 pydantic-settings = "^2.0.0"
-click = "^8.1.0"
+click = "8.1.7"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
