--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ packaging = "^24.0"
 pydantic = "^2.0.0"
 pydantic-settings = "^2.0.0"
 click = "8.1.7"
+feedparser = "^6.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
